# audio-video-project

./: .env  .gitignore  README.md  download.py  environment.yml  init.py  main.py  main_v2.py  pipetest.py  pyproject.toml  requirements.txt  test1.py  test_result.xlsx
backend/: app.py  audio_video.db  config.py  main.bat  tmp5rfuao1u.txt  tmpqdju8vk2.txt
backend/web/: celery_app.py  models.py  realtime.py  routes.py  tasks.py
core/: extract.py  highlight.py  llm.py  transcription.py  utils.py
core/pipeline/: __init__.py  base.py  normal_processor.py  parallel_processor.py  parallel_processor_v2.py  utils.py
core/prompts/: api_prompt.py  highlight_prompt.txt  highlight_prompt_v1.txt  llm_prompt.py  llm_prompt_v4.py  mixed_model_prompt.py  outline_prompt.txt  outline_prompt_v1.txt  outline_prompt_v2.txt  outline_v2.txt
core/prompts/old/: llm_prompt_v1.py  llm_prompt_v3.py  mixed_model_prompt_v1.py
fireredasr/models/: fireredasr.py
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  router.ts  socket.ts  style.css
frontend/src/components/: AppNav.vue  BreadcrumbNav.vue  SourceVideoModal.vue
frontend/src/pages/: HistoryPage.vue  PromptPage.vue  ResultDashboardPage.vue  ResultModal.vue  TaskDetailPage.vue  UploadPage.vue
frontend/src/types/: task.ts
srt_chunks/: chunk_0.json
test/: test.py
